# telli4sakura

./: .gitignore  LICENSE  flake.nix
fcc/: .clangd  CMakeLists.txt
fcc/components/filters/: CMakeLists.txt  kalman.c  weighted_average.c
fcc/components/filters/include/: kalman.h  weighted_average.h
fcc/components/flight_state/: CMakeLists.txt  apogee.c
fcc/components/flight_state/include/: apogee.h
fcc/components/lora/: CMakeLists.txt  lora.c
fcc/components/lora/include/: lora.h
fcc/components/minmea/: minmea.c
fcc/components/sensors/: CMakeLists.txt  bmp390_drv.c  gps_drv.c  max3232_drv.c  mpu6050_drv.c  ms5611_drv.c
fcc/components/sensors/include/: bmp390_drv.h  gps_drv.h  max3232_drv.h  mpu6050_drv.h  ms5611_drv.h
fcc/main/: CMakeLists.txt  fcc.c  idf_component.yml
gru/: Cargo.toml
gru/src/: app.rs  main.rs  protocol.rs  ui.rs
utils/: data_sample_send.py  read_bytes_from_serial.py
